--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -11,43 +11,37 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
 apiVersion: skaffold/v2alpha4
 kind: Config
 build:
   artifacts:
-  - image: gcr.io/bank-of-anthos/frontend
+  - image: frontend
     context: src/frontend
-  - image: gcr.io/bank-of-anthos/ledgerwriter
+  - image: ledgerwriter
     jib:
       project: src/ledgerwriter
-  - image: gcr.io/bank-of-anthos/balancereader
+  - image: balancereader
     jib:
       project: src/balancereader
-  - image: gcr.io/bank-of-anthos/transactionhistory
+  - image: transactionhistory
     jib:
       project: src/transactionhistory
-  - image: gcr.io/bank-of-anthos/contacts
+  - image: contacts
     context: src/contacts
-  - image: gcr.io/bank-of-anthos/userservice
+  - image: userservice
     context: src/userservice
-  - image: gcr.io/bank-of-anthos/loadgenerator
+  - image: loadgenerator
     context: src/loadgenerator
-  - image: gcr.io/bank-of-anthos/accounts-db
-    context: src/accounts-db
-  - image: gcr.io/bank-of-anthos/ledger-db
-    context: src/ledger-db
   tagPolicy:
     gitCommit: {}
-  local:
-    concurrency: 0
 deploy:
   statusCheckDeadlineSeconds: 300
-  kubectl:
-    manifests:
-    - ./dev-kubernetes-manifests/**.yaml
-    # deploy a pre-build secret
-    # in practice, this should not be checked in to source control
-    - ./extras/jwt/jwt-secret.yaml
+  kustomize: {}
 profiles:
-  - name: local-code
+  - name: dev
+    deploy: 
+      kustomize: 
+        paths:
+          - "cymbalbank-app-config/overlays/dev"
+  - name: staging 
+  - name: prod 
