--- a/cloudbuild-ci-pr.yaml
+++ b/cloudbuild-ci-pr.yaml
@@ -1,3 +1,4 @@
+# TODO - break into separate steps? 
 steps: 
 - name: 'gcr.io/k8s-skaffold/skaffold:latest'
   id: Deploy to Staging Cluster 
@@ -7,7 +8,7 @@ steps:
   - |
     gcloud container clusters get-credentials ${_CLUSTER_NAME} --zone ${_CLUSTER_ZONE} --project ${PROJECT_ID} 
     skaffold run --default-repo="gcr.io/${PROJECT_ID}/cymbal-bank/${BRANCH_NAME}" --tail=false
-    kubectl wait --for=condition=available --timeout=300s deployment/frontend -n fronted 
+    kubectl wait --for=condition=available --timeout=300s deployment/frontend -n frontend 
     kubectl wait --for=condition=available --timeout=300s deployment/contacts -n contacts 
     kubectl wait --for=condition=available --timeout=300s deployment/userservice -n userservice 
     kubectl wait --for=condition=available --timeout=300s deployment/ledgerwriter -n ledgerwriter 
