--- a/cloudbuild-ci-pr.yaml
+++ b/cloudbuild-ci-pr.yaml
@@ -7,7 +7,7 @@ steps:
   - '-c'
   - |
     gcloud container clusters get-credentials ${_CLUSTER_NAME} --zone ${_CLUSTER_ZONE} --project ${PROJECT_ID} 
-    skaffold run --default-repo="gcr.io/${PROJECT_ID}/cymbal-bank/${BRANCH_NAME}" --tail=false
+    skaffold run  --profile=staging --default-repo="gcr.io/${PROJECT_ID}/cymbal-bank/${BRANCH_NAME}" --tail=false
     kubectl wait --for=condition=available --timeout=300s deployment/frontend -n frontend 
     kubectl wait --for=condition=available --timeout=300s deployment/contacts -n contacts 
     kubectl wait --for=condition=available --timeout=300s deployment/userservice -n userservice 
