--- a/cloudbuild-ci-pr.yaml
+++ b/cloudbuild-ci-pr.yaml
@@ -6,6 +6,7 @@ steps:
   args:
   - '-c'
   - |
+    git clone "https://github.com/$$GITHUB_USERNAME/cymbalbank-app-config"
     gcloud container clusters get-credentials ${_CLUSTER_NAME} --zone ${_CLUSTER_ZONE} --project ${PROJECT_ID} 
     skaffold run --default-repo="gcr.io/${PROJECT_ID}/cymbal-bank/${BRANCH_NAME}" --tail=false
     kubectl wait --for=condition=available --timeout=300s deployment/frontend -n frontend 
@@ -18,3 +19,7 @@ steps:
 substitutions:
   _CLUSTER_NAME: 'cymbal-staging'
   _CLUSTER_ZONE: 'us-central1-a'
+availableSecrets:
+  secretManager:
+  - versionName: projects/${PROJECT_ID}/secrets/github-username/versions/1 
+    env: 'GITHUB_USERNAME'
