--- a/cloudbuild-ci-pr.yaml
+++ b/cloudbuild-ci-pr.yaml
@@ -16,6 +16,7 @@ steps:
     kubectl wait --for=condition=available --timeout=300s deployment/transactionhistory -n transactionhistory 
     kubectl wait --for=condition=available --timeout=300s deployment/balancereader -n balancereader 
     kubectl wait --for=condition=available --timeout=300s deployment/loadgenerator -n loadgenerator
+  secretEnv: ['GITHUB_USERNAME']
 substitutions:
   _CLUSTER_NAME: 'cymbal-staging'
   _CLUSTER_ZONE: 'us-central1-a'
