--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -14,6 +14,7 @@
 apiVersion: skaffold/v2alpha4
 kind: Config
 build:
+  concurrency: 4
   artifacts:
   - image: frontend
     context: src/frontend
