--- a/cloudbuild-ci-main.yaml
+++ b/cloudbuild-ci-main.yaml
@@ -34,3 +34,4 @@ availableSecrets:
   secretManager:
   - versionName: projects/${PROJECT_ID}/secrets/github-username/versions/1 
     env: 'GITHUB_USERNAME'
+timeout: '1200s' #timeout - 20 minutes
