--- a/cloudbuild-ci-main.yaml
+++ b/cloudbuild-ci-main.yaml
@@ -8,10 +8,12 @@ steps:
 #     skaffold build --profile prod --default-repo="gcr.io/${PROJECT_ID}/cymbal-bank/release" --tag ${SHORT_SHA}
 - name: 'gcr.io/cloud-builders/gcloud'
   id: Image tags -> cymbalbank-app-config manifests 
-  entrypoint: /bin/sh
+  entrypoint: 'bash'
   args:
-  - '-c'
-  - |
+   - '-eEuo'
+   - 'pipefail'
+   - '-c'
+   - |-
     set -x 
     git clone https://github.com/$$GITHUB_USERNAME/cymbalbank-app-config && \
     cd cymbalbank-app-config && \
@@ -22,9 +24,9 @@ steps:
     git remote set-url origin https://$$GITHUB_USERNAME:$$GITHUB_TOKEN@github.com/$$GITHUB_USERNAME/cymbalbank-app-config.git
 
     for f in base/; do 
-        _SERVICE_NAME="`basename $f .yaml`"
+        export _SERVICE_NAME="`basename $f .yaml`"
         echo "🏦 Service name: ${_SERVICE_NAME}"
-        _SUBST="image: gcr.io/${PROJECT_ID}/cymbal-bank/release/${_SERVICE_NAME}:${SHORT_SHA}"
+        export _SUBST="image: gcr.io/${PROJECT_ID}/cymbal-bank/release/${_SERVICE_NAME}:${SHORT_SHA}"
         echo "🐳 Injecting image tag: $_SUBST > $f"  
         sed -i "s|image:*$_SERVICE_NAME|$_SUBST|g" $f 
         echo "📝 Updated $f:"
