--- a/cloudbuild-ci-main.yaml
+++ b/cloudbuild-ci-main.yaml
@@ -28,7 +28,7 @@ steps:
         echo "🏦 Service name: ${_SERVICE_NAME}"
         export _SUBST="image: gcr.io/${PROJECT_ID}/cymbal-bank/release/${_SERVICE_NAME}:${SHORT_SHA}"
         echo "🐳 Injecting image tag: $_SUBST > $f"  
-        gsed -i "s|image: $_SERVICE_NAME|$_SUBST|g" $f 
+        sed -i "s|image: $_SERVICE_NAME|$_SUBST|g" $f 
         echo "✅ File output, $f:"
         cat $f | grep image:
     done 
