--- a/cloudbuild-ci-main.yaml
+++ b/cloudbuild-ci-main.yaml
@@ -26,11 +26,15 @@ steps:
         if [[ "$f" == 'base/kustomization.yaml' ]]; then
           continue
         fi
-        export _SERVICE_NAME="`basename $f .yaml`"
-        echo "🏦 Service name: ${_SERVICE_NAME}"
-        export _SUBST="image: gcr.io/${PROJECT_ID}/cymbal-bank/release/${_SERVICE_NAME}:${SHORT_SHA}"
-        echo "🐳 Injecting image tag: $_SUBST > $f"  
-        sed -i "s|image: $_SERVICE_NAME|$_SUBST|g" $f 
+        svc="`basename $f .yaml`"
+        echo "🏦 Service name: $svc"
+        subst="image: gcr.io/${PROJECT_ID}/cymbal-bank/release/$svc:${SHORT_SHA}"
+        
+        echo "🐳 Injecting image tag: $subst > $f"  
+        sed -i "s|image: $svc|$subst|g" $f 
+        
+        echo "📝 Done injecting image tag - $f"
+        cat $f | grep "image: "
     done 
 
     git add . && \
@@ -40,9 +44,9 @@ steps:
     git push origin main
   secretEnv: ['GITHUB_EMAIL', 'GITHUB_USERNAME', 'GITHUB_TOKEN']
 # these vars are set inline in the script, but defined here to avoid Cloud Build errs  
-substitutions:
-    _SERVICE_NAME: "test"
-    _SUBST: "test"
+# substitutions:
+#     _SERVICE_NAME: "test"
+#     _SUBST: "test"
 availableSecrets:
   secretManager:
   - versionName: projects/${PROJECT_ID}/secrets/github-username/versions/1 
